login using email and password

--- a/views/register.pug
+++ b/views/register.pug
@@ -3,6 +3,8 @@ h1 Please Register
 form(action="/register" method='post')
     label(for="email") eMail 
     input(type="email" id='email' name='email' required)
+    label(for="name") eMail 
+    input(type="name" id='text' name='name' required)
     label(for="password") Password 
     input(type='password' id='password' name='password' required)
     label(for='confirmPassword') Confirm Password 
