--- a/views/login.pug
+++ b/views/login.pug
@@ -5,6 +5,7 @@ form(action="/login" method="post")
     input(type="email" id='email' name='email' placeholder='Please input your email')
     label(for='password') Password 
     input(type="password" id='password' name='password' placeholder='password') 
+    button(type='submit') submit
         
 h3 If you dont have an account, please <a href="/register">register</a>
     
