registration page issues

--- a/views/register.pug
+++ b/views/register.pug
@@ -1,42 +1,47 @@
 include header.pug
 h1 Please Register
 form(action="/register" method='post')
+    -let fields= {}
+    if locals.fields
+        -fields = locals.fields
+    else
+        -fields = {email:'', name:'', password:'',confirmPassword:'', membership:'' }
     div
         div 
             label(for="email") eMail 
         div
-            input(type="email" id='email' name='email' value=locals.fields.email ? locals.fields.email:'' required)
-        - if (locals.errors.email)
+            input(type="email" id='email' name='email' value=fields.email required)
+        - if (locals.errors && locals.errors.email)
             div 
                 p=locals.errors.email.msg
     div 
         div 
             label(for="name") Name 
         div 
-            input(type="name" id='text' name='name' value=locals.fields.name ? locals.fields.name:'' required)
-        - if (locals.errors.name)
+            input(type="name" id='text' name='name' value=fields.name  required)
+        - if (locals.errors && locals.errors.name)
             div 
                 p=locals.errors.name.msg
     div 
         div 
             label(for="password") Password 
         div
-            input(type='password' id='password' name='password' value=locals.fields.password ? locals.fields.password:'' required)
-        - if (locals.errors.password)
+            input(type='password' id='password' name='password' value=fields.password required)
+        - if (locals.errors && locals.errors.password)
             div 
                 p=locals.errors.password.msg
     div 
         div
             label(for='') Confirm Password 
         div 
-            input(type='password' id='confirmPassword' name='confirmPassword' value=locals.fields.confirmPassword ? locals.fields.confirmPassword:'' required)
-        - if (locals.errors.confirmPassword)
+            input(type='password' id='confirmPassword' name='confirmPassword' value=fields.confirmPassword required)
+        - if (locals.errors && locals.errors.confirmPassword)
             div 
                 p=locals.errors.confirmPassword.msg
     div 
         div 
             label(for='membership') Membership Code (optional)
         div 
-            input(type='text' id='membership' name='membership' value=locals.fields.membership ? locals.fields.membership:'')
+            input(type='text' id='membership' name='membership' value=fields.membership)
     div 
         button(type='submit') Submit  
