--- a/views/header.pug
+++ b/views/header.pug
@@ -2,4 +2,6 @@ include head.pug
 body 
     header this is a header
         if (locals.name)
-            p= `Welcome ${locals.name}`
+            p Welcome 
+                a(href="/profile")= `${locals.name}` 
+            a(href="/logout") logout
