--- a/views/registration-successful.pug
+++ b/views/registration-successful.pug
@@ -1,3 +1,4 @@
-include header.pug
+include ./fragments/header.pug
 h1 registered successfully 
 a(href="/login") go back to login page 
+include ./fragments/footer.pug
