--- a/views/login.pug
+++ b/views/login.pug
@@ -1,11 +1,25 @@
-include header.pug
+include ./fragments/header.pug
 h1 please log in 
 form(action="/login" method="post")
-    label(for='email') eMail 
-    input(type="email" id='email' name='email' placeholder='Please input your email')
-    label(for='password') Password 
-    input(type="password" id='password' name='password' placeholder='password') 
-    button(type='submit') submit
-        
+    -let fields= {}
+    if locals.fields
+        -fields = locals.fields
+    else
+        -fields = {email:'', password:''}
+    div 
+        div 
+            label(for='email') eMail 
+        div 
+            input(type="email" id='email' name='email' value=fields.email placeholder='Please input your email')
+    div 
+        div 
+            label(for='password') Password 
+        div 
+            input(type="password" id='password' name='password' value=fields.password placeholder='password') 
+    div 
+        button(type='submit') submit
+    - if (locals.error)
+        div 
+            p=locals.error   
 h3 If you dont have an account, please <a href="/register">register</a>
-    
+include ./fragments/footer.pug
