--- a/views/404.pug
+++ b/views/404.pug
@@ -1,5 +1,5 @@
 include ./fragments/header.pug
 
 h1 Page not found
-a(href="/login") go back to login page 
+a(href="/login") go back to home page 
 include ./fragments/footer.pug
