--- a/views/posts.pug
+++ b/views/posts.pug
@@ -1,5 +1,7 @@
 include ./fragments/header.pug
 h1 posts
+a(href="/add-post") 
+    button Add Post 
 if locals.posts 
     each post in posts
         div 
