--- a/views/login.pug
+++ b/views/login.pug
@@ -1,28 +1,28 @@
-include ./fragments/header.pug
-h1 please log in 
-form(action="/login" method="post")
-    -let fields= {}
-    if locals.fields
-        -fields = locals.fields
-    else
-        -fields = {email:'', password:''}
-    div 
+extends layout.pug 
+block content
+    h1 please log in 
+    form(action="/login" method="post")
+        -let fields= {}
+        if locals.fields
+            -fields = locals.fields
+        else
+            -fields = {email:'', password:''}
         div 
-            label(for='email') eMail 
+            div 
+                label(for='email') eMail 
+            div 
+                input(type="email" id='email' name='email' value=fields.email placeholder='Please input your email')
         div 
-            input(type="email" id='email' name='email' value=fields.email placeholder='Please input your email')
-    div 
+            div 
+                label(for='password') Password 
+            div 
+                input(type="password" id='password' name='password' value=fields.password placeholder='password') 
         div 
-            label(for='password') Password 
-        div 
-            input(type="password" id='password' name='password' value=fields.password placeholder='password') 
-    div 
-        button(type='submit') submit
-    - if (locals.error)
-        div 
-            p=locals.error   
-    - if (locals.success)
-        div 
-            p=locals.success   
-h3 If you dont have an account, please <a href="/register">register</a>
-include ./fragments/footer.pug
+            button(type='submit') submit
+        - if (locals.error)
+            div 
+                p=locals.error   
+        - if (locals.success)
+            div 
+                p=locals.success   
+    h3 If you dont have an account, please <a href="/register">register</a>
