--- a/views/500.pug
+++ b/views/500.pug
@@ -1,5 +1,5 @@
-include ./fragments/header.pug
+extends layout.pug 
+block content
+    h1 Something went wrong
+    a(href="/login") go back to home page 
 
-h1 Something went wrong
-a(href="/login") go back to home page 
-include ./fragments/footer.pug
