--- a/views/login-failure.pug
+++ b/views/login-failure.pug
@@ -1,4 +1,4 @@
-include ./fragments/header.pug
-h1 failed login 
-include ./fragments/footer.pug
+extends layout.pug 
+block content
+    h1 failed login 
 
