--- a/views/login-success.pug
+++ b/views/login-success.pug
@@ -1,3 +1,3 @@
-include ./fragments/header.pug
-h1 login successful
-include ./fragments/footer.pug
+extends layout.pug 
+block content
+    h1 login successful
