--- a/views/registration-successful.pug
+++ b/views/registration-successful.pug
@@ -1,4 +1,5 @@
-include ./fragments/header.pug
-h1 registered successfully 
-a(href="/login") go back to login page 
-include ./fragments/footer.pug
+extends layout.pug 
+block content
+    h1 registered successfully 
+    a(href="/login") go back to login page 
+
