--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -17,6 +17,13 @@ header div{
   /* width: 50%; */
   text-align: center;
 }
+
+.title h2{
+  font-family: "Bonheur Royale", cursive;
+  font-weight: 900;
+  font-style: normal;
+  color: var(--primary-550);
+}
 .user-header{
   display: flex;
   flex-direction: column;
@@ -24,21 +31,132 @@ header div{
   align-items: end;
   justify-content: center;
 }
-
+body{
+  background-color: var(--primary-100);
+  color: var(--primary-900); /* readable dark text */
+  /* font-family: 'Georgia', serif; */
+  padding: 2rem;}
 main{
   display: flex;
   flex-direction: column;
+  gap:1rem;
   margin: auto;
   width: 90%;
 }
 
-button{
+.login-form, .register-form, .addpost-form{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+}
+
+
+.addpost-form > div:nth-child(3){
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+}
+.form{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+  background-color: var(--secondary-100);
+  /* border: 1px solid var(--primary-300); */
+  border-radius: 12px;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+input,textarea{
   border: none;
-  background-color: var(--primary-500);
-  color: var(--primary-800);
-  border-radius: 0.5rem;
-  width: 6rem;
-  height: 2rem;
-  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  width: 40%;
+  padding: 0.5rem 1rem;
+  border-radius: var(--radius);
+}
+
+.posts{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+.post{
+  display: flex;
+  flex-direction: column;
+  gap:1rem;
+  background-color: var(--secondary-100);
+  /* border: 1px solid var(--primary-300); */
+  border-radius: 12px;
+  padding: 1rem;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+.post:hover{
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 
 }
+.post-header{
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  border-bottom: 1px solid black;
+}
+
+/* .post-header div:nth-child(1) div:nth-child(2){
+  padding: 0.2rem 0.8rem;
+  border: 2px solid black;
+  border-radius: var(--radius);
+} */
+
+.post-content{
+  /* padding: 0.2rem 0.8rem; */
+  /* border: 2px solid black;
+  border-radius: var(--radius); */
+  min-height: 5rem;
+}
+.post-header > div:nth-child(1){
+  flex-basis: auto;
+  flex-grow: 1;
+  flex-shrink: 0;
+}
+.post-header > div:nth-child(2){
+  flex-basis: auto;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+.post-header> div:nth-child(3){
+  flex-basis: auto;
+
+  flex-grow: 0;
+  flex-shrink: 1;
+}
+
+
+
+/* button{
+  border: none;
+  background-color: var(--primary-550);
+  color: var(--primary-800);
+  border-radius: var(--radius);
+  width: 6rem;
+  height: 2rem;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+
+} */
+
+button{
+  background-color: var(--primary-550);
+  color: var(--primary-100);
+  border: none;
+  padding: 0.7rem 1.2rem;
+  /* font-weight: bold;
+  font-family: 'Georgia', serif; */
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: var(--primary-600);}
+
