--- a/views/fragments/head.pug
+++ b/views/fragments/head.pug
@@ -3,4 +3,7 @@ meta(name="viewport", content="width=device-width, initial-scale=1.0")
 link(rel="stylesheet", href="/css/init.css")
 link(rel="stylesheet", href="/css/globals.css")
 link(rel="stylesheet", href="/css/styles.css")
+link(rel="preconnect", href="https://fonts.googleapis.com")
+link(rel="preconnect", href="https://fonts.gstatic.com", crossorigin)
+link(href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&display=swap", rel="stylesheet")
 title The Royal Club 
